# scrumit

./: .env.sample  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  README.md  bandit.yaml  conversation.sample  output.sample  pyproject.toml  pytest.ini  requirements.chill  requirements.txt  sample_paraphraser_examples.json  sample_recognizer_examples.json  tmp.py
examples/: recognizer.py
examples/paraphraser/: openai_backend.py
examples/recognizer/: openai_backend.py
examples/scrumer/: openai_backend.py
examples/scrumit/: openai_backend.py
scrumit/: config.py  default_examples.json  scrumit.py
scrumit/entity/: __init__.py  paraphraser.py  recognizer.py  scrumit.py
scrumit/paraphraser/: base.py  exceptions.py  paraphraser.py
scrumit/paraphraser/backends/: __init__.py  openai.py
scrumit/recognizer/: __init__.py  base.py  exceptions.py  recognizer.py
scrumit/recognizer/backends/: __init__.py  openai.py
scrumit/scrumer/: __init__.py  base.py  scrumit.py
scrumit/scrumit/: __init__.py  base.py  exceptions.py  scrumit.py
