[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scrumit"
description = "Package that converts raw text to scrum user stories"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
version = "0.0.1"
requires-python = ">=3.10.9"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.scripts]
scrumit = "scrumit.__main__:main"
