[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scrumit"
description = "Package that converts raw text to scrum user stories"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
version = "0.0.3"
requires-python = ">=3.10.9"
dynamic = ["dependencies"]
license = { file = "LICENSE" }

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.package-data]
scrumit = ["default_paraphraser_examples.json", "default_recognizer_examples.json"]

[project.scripts]
scrumit = "scrumit.cmd:main"
